refactor: 优化插件的代码